# MinimalNotes

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
Docs/: .gitignore  architecture.md  development.md  frontend-modules.md  index.md  requerimientos.md  rust-backend.md  user-guide.md  visual.html
src/: README.md  index.html  settings.html
src-tauri/: Cargo.toml  PKGBUILD  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_manager.rs  main.rs
src/css/: settings.css  styles.css
src/js/: config.js  drag.js  history.js  ipc.js  main.js  notes.js  settings.js  state.js  stepper.js  store.js  sync.js  utils.js  windows.js
src/js/ui/: editor.js  search.js  sidebar.js  tabbar.js
