[package]
name    = "minimalnotes"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = [] }
tauri-plugin-store        = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-single-instance = "2"
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
